fix css so header link isnt covered by total players element

--- a/GauntletLeaderboard.Web/Content/Site.css
+++ b/GauntletLeaderboard.Web/Content/Site.css
@@ -23,10 +23,6 @@ ul.nav-pills {
     text-decoration: none;
 }
 
-#navbar {
-    position: relative;
-}
-
 footer {
     text-align: center;
 }
